2007-09-11  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/cstartup.cxx: Change the INIT priority of
	cyg_libc_startup_obj so that it is always called after the thread
	has been constructed. Reported by taiyun@sunnorth.com.cn

2007-07-02  Gary Thomas  <gary@mlbassoc.com>

	* cdl/startup.cdl: Add (char *) casts to make GCC/4.2.x happy.

2003-03-07  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/mainthread.cxx: Align stack to relevant architecture alignment.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/startup.cdl: Fix doc link.

2002-04-09  Jonathan Larmour  <jlarmour@redhat.com>

	* src/_exit.cxx (_exit): Assert on non-zero error.

2001-10-09  Jonathan Larmour  <jlarmour@redhat.com>

	* src/invokemain.cxx (cyg_libc_invoke_main): CYGINT_ISO_PTHREAD_IMPL
	needs #ifdef not #if now.

2000-12-22  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/startup.cdl: Allow others to say whether main() can be invoked
	elsewhere.
	Use defaults for startup context implementor using above interface
	rather than POSIX pthread package.
	Allow main() stack to be visible for other implementors, except
	when called from the init context since the stack size isn't used
	there, or when the implementation says it doesn't use it.
	Define an interface to express that the stack size option
	isn't used in such cases.
	
2000-10-12  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/startup.cdl (CYGSEM_LIBC_INVOKE_DEFAULT_STATIC_CONSTRUCTORS):
	Special case for POSIX package startup since we know it calls
	cyg_libc_invoke_main() rather than main directly.

2000-08-07  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* src/invokemain.cxx: Declare cyg_hal_stop_constructors

2000-07-31  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* src/cstartup.cxx: Fix typo

2000-07-19  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* cdl/startup.cdl:
	Make a "radio button" choice between how main() gets invoked (eCos
	thread vs. cyg_user_start vs. someone else doing it)
